--- a/index.html
+++ b/index.html
@@ -1,24 +1,79 @@
 <!doctype html>
 <html lang="en">
 
-<!--
-WRITTEN BY: Madison Min
-EMAIL: mdmin@uci.edu
+<!-- 
+WRITTEN BY: Madison Min 
+EMAIL: mdmin@uci.edu 
 -->
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Madison Min">
-  <meta name="description" content="description of your page">
-   <!-- you would link to an external stylesheet here! -->
-   <!-- you would also link to Bootstrap here! -->
-  <title>title here</title>
+  <meta name="description" content="A professional portfolio showcasing my projects and skills.">
+  
+  <!-- External Stylesheet -->
+  <link rel="stylesheet" href="styles.css">
+  
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
+  <!-- Title -->
+  <title>Madison's Portfolio</title>
 </head>
+
 <body>
-  <p>
-    <a href="http://validator.w3.org/check?uri=referer">
-       W3C validator
-    </a>
-  </p>
+  <!-- Header Section -->
+  <header class="container text-center py-4">
+    <h1>Madison Min</h1>
+    <p>Welcome to my portfolio!</p>
+  </header>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="container py-4">
+    <section>
+      <h2>About Me</h2>
+      <p>This is my professional portfolio, where I showcase my skills, experiences, and projects. Feel free to explore and get in touch!</p>
+    </section>
+
+    <section class="mt-4">
+      <h2>Featured Project</h2>
+      <img src="/Users/madisonmin/Desktop/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
+      <p>A brief description of one of my most notable projects goes here.</p>
+      <a href="projects.html" class="btn btn-primary">View All Projects</a>
+    </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 Madison Min. All rights reserved.</p>
+    <p>
+      <a href="http://validator.w3.org/check?uri=referer" class="text-white">
+        W3C Validator
+      </a>
+    </p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
