Added styles using css

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ EMAIL: mdmin@uci.edu
 
     <section class="mt-4">
       <h2>Featured Project</h2>
-      <img src="/Users/madisonmin/Desktop/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
+      <img src="images/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
       <p>A brief description of one of my most notable projects goes here.</p>
       <a href="projects.html" class="btn btn-primary">View All Projects</a>
     </section>
@@ -65,10 +65,10 @@ EMAIL: mdmin@uci.edu
 
   <!-- Footer Section -->
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 Madison Min. All rights reserved.</p>
+    <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
-      <a href="http://validator.w3.org/check?uri=referer" class="text-white">
-        W3C Validator
+      <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white">
+        LinkedIn
       </a>
     </p>
   </footer>
