--- a/index.html
+++ b/index.html
@@ -35,30 +35,31 @@ EMAIL: mdmin@uci.edu
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
+  
 
   <!-- Main Content -->
   <main class="container py-4">
     <section>
       <h2>About Me</h2>
-      <p>This is my professional portfolio, where I showcase my skills, experiences, and projects. Feel free to explore and get in touch!</p>
+      <p>Hello, I'm Madison. I'm currently a full time student at University of California, Irvine. My major is Informatics specializing in Human-Computer Interaction.</p>
     </section>
 
     <section class="mt-4">
       <h2>Featured Project</h2>
       <img src="images/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
-      <p>A brief description of one of my most notable projects goes here.</p>
+      <p>Created a timer using the pomodoro technique for time management.
+        Features include start, pause, and reset buttons.</p>
       <a href="projects.html" class="btn btn-primary">View All Projects</a>
     </section>
   </main>
@@ -67,11 +68,13 @@ EMAIL: mdmin@uci.edu
   <footer class="bg-dark text-white text-center py-3">
     <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
-      <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white">
-        LinkedIn
+      <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white" target="_blank">
+        <em class="fab fa-linkedin"></em> LinkedIn
       </a>
     </p>
   </footer>
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
