--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ EMAIL: mdmin@uci.edu
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Title -->
   <title>Contact - Madison Min</title>
@@ -29,7 +29,7 @@ EMAIL: mdmin@uci.edu
   <!-- Header Section -->
   <header class="container text-center py-4">
     <h1>Contact</h1>
-    <p>Get in touch with me!</p>
+    <p>mm4365000@gmail.com | 213-436-5000 | Torrance, CA 90504</p>
   </header>
 
   <!-- Navigation -->
@@ -80,7 +80,7 @@ EMAIL: mdmin@uci.edu
   </main>
 
   <!-- Footer Section -->
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="text-white text-center py-3">
     <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
       <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white" target="_blank">
