--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ EMAIL: mdmin@uci.edu
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Madison Min">
-  <meta name="description" content="A professional portfolio showcasing my projects and skills.">
+  <meta name="description" content="A portfolio that shows my projects, skills, and information about me.">
   
   <!-- External Stylesheet -->
   <link rel="stylesheet" href="styles.css">
@@ -19,7 +19,7 @@ EMAIL: mdmin@uci.edu
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Title -->
   <title>Madison's Portfolio</title>
@@ -52,20 +52,30 @@ EMAIL: mdmin@uci.edu
   <main class="container py-4">
     <section>
       <h2>About Me</h2>
-      <p>Hello, I'm Madison. I'm currently a full time student at University of California, Irvine. My major is Informatics specializing in Human-Computer Interaction.</p>
+      <img src="images/hawaii.jpg" alt="Picture of Waikiki Beach" class="img-fluid">
+      <p style="padding-top: 10px;">Hello, my name is Madison. I'm currently a full-time student at the University of California, Irvine, majoring in Informatics with a specialization in Human-Computer Interaction (HCI). My passion for creating user-centered solutions that close the gap between people and technology has driven my academic career. I enjoy using creative thinking, empathy, and innovative design methods to solve challenging problems. Some of my hobbies include going to the beach, photography, working out, and video editing. Feel free to explore my portfolio to learn more about my work, and don’t hesitate to reach out!</p>
     </section>
+
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li><strong>Programming:</strong> Python, Java, RScript, JavaScript, HTML/CSS, SQL, React.js, Node.js, Git</li>
+        <li><strong>Tools:</strong> Figma, Webflow, Adobe, Sony Vegas Pro</li>
+        <li><strong>Human-Centered Design</strong></li>
+      </ul>
+    </section>    
 
     <section class="mt-4">
       <h2>Featured Project</h2>
       <img src="images/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
-      <p>Created a timer using the pomodoro technique for time management.
+      <p style="padding-top: 10px;">Created a timer using the pomodoro technique for time management.
         Features include start, pause, and reset buttons.</p>
       <a href="projects.html" class="btn btn-primary">View All Projects</a>
     </section>
   </main>
 
   <!-- Footer Section -->
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="text-white text-center py-3">
     <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
       <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white" target="_blank">
