--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@ EMAIL: mdmin@uci.edu
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Title -->
   <title>Projects - Madison Min</title>
@@ -53,50 +53,50 @@ EMAIL: mdmin@uci.edu
     <section>
       <h2>Recent Projects</h2>
 
-      <h3>Pomodoro Timer <span class="text-muted">(Oct 2021)</span></h3>
-      <ul>
-        <li><p>Created a timer using the Pomodoro technique for time management.</p></li>
-        <li><p>Utilized <strong>React, JavaScript, HTML, and CSS</strong>.</p></li>
-        <li><p>Features include start, pause, and reset buttons.</p></li>
-        <img src="images/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
-      </ul>
+    <h3>PillPal <span class="text-muted">(Sep 2024 - Nov 2024)</span></h3>
+    <ul>
+      <li><p>Created a 3-Step Medication Adherence Machine prototype called The PillPal for dementia patients.</p></li>
+      <li><p>Collaborated with a partner to design prototypes using <strong>Figma</strong>.</p></li>
+      <li><p>Features include a mobile app for medication schedules, a smart watch with reminders, a pill dispenser for scheduled doses, and ingestible pills with iron for monitoring consumption.</p></li>
+      <img src="images/pillpal.png" alt="Screenshot of PillPal project" class="img-fluid">
+    </ul>
 
-      <h3>LinkedOut <span class="text-muted">(Nov 2023 - Dec 2023)</span></h3>
-      <ul>
-        <li><p>Improved LinkedIn’s usability and accessibility through interviews and analysis.</p></li>
-        <li><p>Collaborated with three other students to create a prototype of an improved version of LinkedIn using <strong>Figma</strong>.</p></li>
-        <li><p>Enhanced accessibility by adding screen readers, reorganized the homepage for clarity, and improved the onboarding experience for new users.</p></li>
-        <img src="images/linkedout.png" alt="Screenshot of a featured project" class="img-fluid">
-      </ul>
+    <h3>SimpleDocs <span class="text-muted">(May 2024 - Jun 2024)</span></h3>
+    <ul>
+      <li><p>Developed an easy-to-use collaborative document editing app for children in school.</p></li>
+      <li><p>Collaborated with five other students using <strong>Figma, Lucidcharts, and PlantUML</strong>.</p></li>
+      <li><p>Key functionalities include real-time collaborative editing, offline editing, basic text and image editing, privacy and safety features, and parent/guardian oversight.</p></li>
+      <img src="images/simpledocs.png" alt="Screenshot of SimpleDocs project" class="img-fluid">
+    </ul>
 
-      <h3>Eco-Zot <span class="text-muted">(Jan 2024 - Mar 2024)</span></h3>
-      <ul>
-        <li><p>Developed an app that helps plan commuting in the most eco-friendly way.</p></li>
-        <li><p>Collaborated with four other students to create prototypes using <strong>Figma</strong>.</p></li>
-        <li><p>The app calculates the best route by transportation type, tracks carbon savings, and features a rewards system.</p></li>
-        <img src="images/ecozot.png" alt="Screenshot of a featured project" class="img-fluid">
-      </ul>
+    <h3>Eco-Zot <span class="text-muted">(Jan 2024 - Mar 2024)</span></h3>
+    <ul>
+      <li><p>Developed an app that helps plan commuting in the most eco-friendly way.</p></li>
+      <li><p>Collaborated with four other students to create prototypes using <strong>Figma</strong>.</p></li>
+      <li><p>The app calculates the best route by transportation type, tracks carbon savings, and features a rewards system.</p></li>
+      <img src="images/ecozot.png" alt="Screenshot of Eco-Zot project" class="img-fluid">
+    </ul>
 
-      <h3>SimpleDocs <span class="text-muted">(May 2024 - Jun 2024)</span></h3>
-      <ul>
-        <li><p>Developed an easy-to-use collaborative document editing app for children in school.</p></li>
-        <li><p>Collaborated with five other students using <strong>Figma, Lucidcharts, and PlantUML</strong>.</p></li>
-        <li><p>Key functionalities include real-time collaborative editing, offline editing, basic text and image editing, privacy and safety features, and parent/guardian oversight.</p></li>
-        <img src="images/simpledocs.png" alt="Screenshot of a featured project" class="img-fluid">
-      </ul>
-      
-      <h3>PillPal <span class="text-muted">(Sep 2024 - Nov 2024)</span></h3>
-      <ul>
-        <li><p>Created a 3-Step Medication Adherence Machine prototype called The PillPal for dementia patients.</p></li>
-        <li><p>Collaborated with a partner to design prototypes using <strong>Figma</strong>.</p></li>
-        <li><p>Features include a mobile app for medication schedules, a smart watch with reminders, a pill dispenser for scheduled doses, and ingestible pills with iron for monitoring consumption.</p></li>
-        <img src="images/pillpal.png" alt="Screenshot of a featured project" class="img-fluid">
-      </ul>
+    <h3>LinkedOut <span class="text-muted">(Nov 2023 - Dec 2023)</span></h3>
+    <ul>
+      <li><p>Improved LinkedIn’s usability and accessibility through interviews and analysis.</p></li>
+      <li><p>Collaborated with three other students to create a prototype of an improved version of LinkedIn using <strong>Figma</strong>.</p></li>
+      <li><p>Enhanced accessibility by adding screen readers, reorganized the homepage for clarity, and improved the onboarding experience for new users.</p></li>
+      <img src="images/linkedout.png" alt="Screenshot of LinkedOut project" class="img-fluid">
+    </ul>
+
+    <h3>Pomodoro Timer <span class="text-muted">(Oct 2021)</span></h3>
+    <ul>
+      <li><p>Created a timer using the Pomodoro technique for time management.</p></li>
+      <li><p>Utilized <strong>React, JavaScript, HTML, and CSS</strong>.</p></li>
+      <li><p>Features include start, pause, and reset buttons.</p></li>
+      <img src="images/pomodoro.png" alt="Screenshot of Pomodoro Timer project" class="img-fluid">
+    </ul>
     </section>
   </main>
 
   <!-- Footer Section -->
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="text-white text-center py-3">
     <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
       <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white" target="_blank">
