--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@ EMAIL: mdmin@uci.edu
       
       <!-- Contact Form -->
       <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-        <input type="hidden" name="access_key" value="a4d18e19-60ee-421a-8f69-18a67c0130ba" />
-        <input type="hidden" name="subject" value="New Contact Form Submission from Web3Forms" />
-        <input type="hidden" name="from_name" value="My Website" />
+        <input type="hidden" name="access_key" value="a4d18e19-60ee-421a-8f69-18a67c0130ba">
+        <input type="hidden" name="subject" value="New Contact Form Submission from Web3Forms">
+        <input type="hidden" name="from_name" value="My Website">
         
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
