--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@ EMAIL: mdmin@uci.edu
     <p>Copyright &copy; 2025 by Madison Min.</p>
     <p>
       <a href="https://www.linkedin.com/in/madison-min-1912ba32b/" class="text-white" target="_blank">
-        <i class="fab fa-linkedin"></i> LinkedIn
+        <em class="fab fa-linkedin"></em> LinkedIn
       </a>
     </p>
   </footer>
