--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ EMAIL: mdmin@uci.edu
     <section>
       <h2>About Me</h2>
       <img src="images/hawaii.jpg" alt="Picture of Waikiki Beach" class="img-fluid">
-      <p style="padding-top: 10px;">Hello, my name is Madison. I'm currently a full-time student at the University of California, Irvine, majoring in Informatics with a specialization in Human-Computer Interaction (HCI). My passion for creating user-centered solutions that close the gap between people and technology has driven my academic career. I enjoy using creative thinking, empathy, and innovative design methods to solve challenging problems. Some of my hobbies include going to the beach, photography, working out, and video editing. Feel free to explore my portfolio to learn more about my work, and don’t hesitate to reach out!</p>
+      <p style="padding-top: 10px;">Hello, my name is Madison. I'm currently a full-time student at the University of California, Irvine, majoring in Informatics with a specialization in Human-Computer Interaction (HCI). My passion for creating user-centered solutions that close the gap between people and technology has driven my academic career. I enjoy using creative thinking and innovative design methods to solve challenging problems. Some of my hobbies include going to the beach, photography, working out, and video editing. Feel free to explore my portfolio to learn more about my work, and don’t hesitate to reach out!</p>
     </section>
 
     <section>
@@ -67,7 +67,10 @@ EMAIL: mdmin@uci.edu
 
     <section class="mt-4">
       <h2>Featured Project</h2>
-      <img src="images/pomodoro.png" alt="Screenshot of a featured project" class="img-fluid">
+      <video controls width="1000" height="400">
+        <source src="videos/pomodorovideo.mp4" type="video/mp4">
+        Your browser does not support the video tag.</a>.
+      </video>
       <p style="padding-top: 10px;">Created a timer using the pomodoro technique for time management.
         Features include start, pause, and reset buttons.</p>
       <a href="projects.html" class="btn btn-primary">View All Projects</a>
